--- a/index.css
+++ b/index.css
@@ -1,13 +1,12 @@
 @font-face {
-  font-family: 'CustomFont';
+  font-family: 'SfProDisplay';
   src: url('fonts/SFProDisplay-Regular.woff') format('woff'),
        url('fonts/SFProDisplay-Regular.woff2') format('woff2');
   /* Specify other font properties like font-weight and font-style if desired */
 }
 
 body {
-  font-family: 'CustomFont';
-  /* padding: 2em; */
+  font-family: 'SfProDisplay';
   background-image: url('images/Asset.png');
   background-color: black;
   background-repeat: no-repeat;
@@ -18,7 +17,7 @@ body {
 }
 
 /* Group 7 */
-#group-7 {
+#main {
   position: absolute;
   width: 696px;
   height: 552px;
@@ -26,7 +25,8 @@ body {
   top: 238px;
 }
 
-#group-6 {
+/* Group 6 */
+#heading {
   /* POSITION IS ABSOLUTE IN FIGMA MOCKUP */
   /* position: absolute; */
   width: 553px;
@@ -46,6 +46,7 @@ body {
 
 /* We are heads down on building this product towards an early alpha launch in Q2 2023. Reserve your handle, share this page and follow us. */
 #sub-heading {
+  /* POSITION IS ABSOLUTE IN FIGMA MOCKUP */
   /* position: absolute; */
   width: 522px;
   height: 96px;
@@ -59,61 +60,31 @@ body {
   display: flex;
   align-items: flex-end;
   color: #FFFFFF;
+  padding-bottom: 48px;
 }
 
 .input-container {
   position: relative;
-  /* display: flex; */
+  display: flex;
+  gap: 10px;
 }
 
-.input-container label {
-  position: absolute;
-  top: 18px;
-  left: 16px;
-  width: 311px;
-  height: 20px;
-  font-style: normal;
-  font-weight: 700;
-  font-size: 16px;
-  line-height: 20px;
-  /* identical to box height, or 125% */
-  display: flex;
-  align-items: center;
-  /* Text/Primary */
-  color: #FFFFFF;
-  /* Inside auto layout */
-  flex: none;
-  order: 0;
-  flex-grow: 1;
-}
-
-.outerInput {
-  /* Auto layout */
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  padding: 0px;
-  gap: 8px;
-  position: absolute;
-  width: 343px;
-  height: 56px;
-  left: 408px;
-  top: 514px;
+.input-gap {
+  padding-top: 12px;
 }
 
 /* Inputs */
-#name-email {
+.name-email {
   box-sizing: border-box;
   /* Auto layout */
   display: flex;
   flex-direction: row;
   align-items: center;
   padding: 16px;
-  gap: 16px;
   width: 343px;
   height: 56px;
   /* Background/Primary */
-  background: #000000;
+  background-color: #000000;
   /* Border/Secondary */
   border: 2px solid #3D3D3D;
   border-radius: 16px;
@@ -122,6 +93,12 @@ body {
   order: 0;
   align-self: stretch;
   flex-grow: 0;
+  cursor: text;
+  color: #FFFFFF;
+}
+
+.name-email::placeholder {
+  color: #FFFFFF;
 }
 
 #handle {
@@ -144,6 +121,12 @@ body {
   order: 0;
   align-self: stretch;
   flex-grow: 0;
+  cursor: text;
+  color: #FFFFFF;
+}
+
+#handle::placeholder {
+  color: #FFFFFF;
 }
 
 #fine-print {
@@ -174,6 +157,7 @@ body {
   align-items: center;
   padding: 16px;
   gap: 4px;
+  font-weight: 700;
   /* POSITION IS ABSOLUTE IN FIGMA MOCKUP */
   /* position: absolute; */
   width: 343px;
@@ -191,4 +175,3 @@ body {
   border: 1px black solid;
   cursor: pointer;
 }
-
