--- a/index.css
+++ b/index.css
@@ -15,7 +15,7 @@ body {
   height: 981px;
 }
 
-/* Group 7 */
+/* Group 7 in Figma*/
 #main {
   position: absolute;
   width: 696px;
@@ -24,7 +24,7 @@ body {
   top: 238px;
 }
 
-/* Group 6 */
+/* Group 6 in Figma */
 #heading {
   width: 553px;
   height: 96px;
